# cognitive-healium-backend

./: .env.example  .gitignore  Dockerfile  demo.py  docker-compose.yml  pyproject.toml  server.py
healium/: __init__.py  dom_capture.py  healing_agent.py  mcp_client.py  memory.py  models.py  plugin.py  providers.py  selenium_wrapper.py
static/: dashboard.html
